--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,18 +2,25 @@ name: Build
 
 on: push
 
-jobs: 
+jobs:
   build:
     runs-on: ubuntu-20.04
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout repositories
+        uses: actions/checkout@v2
+
+      - name: Setup libs
+        run: |
+          sudo apt-get install clang-format
 
       - name: Check codestyle
-        run: git ls-files *.{cpp,hpp} | xargs clang-format -i --verbose && git diff --exit-code
+        run: |
+          git ls-files *.{c,h} | xargs clang-format -i --verbose
+          git diff --exit-code
 
       - name: Build application
         run: make
-
+      
       - name: Run test
         run: make test
